<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.emain.rps.MainActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/firstName"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/firstname" />
    
  <EditText
      android:id="@+id/age"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/age" />
 
  <RadioGroup android:id="@+id/sex"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <RadioButton android:id="@+id/sexMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sexMale"
        android:onClick="onRadioButtonClicked"/>
    <RadioButton android:id="@+id/sexFemale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sexFemale"
        android:onClick="onRadioButtonClicked"/>
   </RadioGroup>
  
  <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play" 
        android:onClick="loginPlayer" />

</LinearLayout>
