<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.emain.rps.GamePage" >

    <TextView
        android:id="@+id/game_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_page" />

    <Button
        android:id="@+id/playAnother"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:onClick="playAnother"
        android:text="@string/playAnother" />

    <Button
        android:id="@+id/viewStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/playAnother"
        android:layout_alignBottom="@+id/playAnother"
        android:layout_alignParentRight="true"
        android:layout_marginRight="45dp"
        android:onClick="view_statistics"
        android:text="@string/view_statistics" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_string" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_string" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CPU is Choosing" />

    <Button
        android:id="@+id/button"
        android:layout_width="263dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.44"
        android:text="Submit" />

</LinearLayout>